--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "next": "16.1.6",
+    "react-day-picker": "^9.5.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
