--- a/services/order-service/package.json
+++ b/services/order-service/package.json
@@ -7,8 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
     "mysql2": "^3.14.5",
-    "sequelize": "^6.37.7"
+    "nodemailer": "^6.10.0",
+    "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1"
   }
 }
