--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
       - "4002:4002"
     environment:
       PORT: 4002
+      PRODUCT_SERVICE_URL: http://product-service:4001
       WEB_BASE_URL: http://localhost:3000
       ADMIN_USERNAME: admin
       ADMIN_PASSWORD: cent1996
